--- a/stylesheets/scss/_pricing.scss
+++ b/stylesheets/scss/_pricing.scss
@@ -99,19 +99,6 @@
 				width: 33.33%;
 			}
 
-			.features-extra {
-				display: block;
-				margin: 0 $s-pricing-default * 2 $s-pricing-default;
-				padding: $s-pricing-default;
-				font-size: 0.8rem;
-				border: 1px solid $c-grey;
-				@include border-radius(0 0 10px 10px);
-
-				h2 {
-					color: #595959;
-				}
-			}
-
 			&:before {
 				content: url(../images/leaf-rs.png);
 				position: absolute;
@@ -351,40 +338,9 @@
 	}
 
 	/* Features List */
-	.features-list {
+	.features {
 		margin-bottom: 40px;
 		color: #222;
-
-		.features-standard {
-			li {
-				float: left;
-				width: 25%;
-
-				&:before {
-					content: url('../images/i-checkmark-grey.svg');
-					margin-right: 4px;
-					width: 11px;
-					height: 10px;
-					display: inline-block;
-				}
-
-				&.no-svg:before {
-					content: url('../images/i-checkmark-grey.png');
-				}
-
-				&.no-bullet:before {
-					content: "";
-					width: 0;
-					height: 0;
-					padding-left: 0;
-					background-image: none;
-				}
-			}
-		}
-
-		.features-extra {
-
-		}
 
 		ul {
 			margin: 0;
@@ -396,7 +352,40 @@
 				list-style: none;
 			}
 		}
+	}
 
+	.features-standard {
+		li {
+			float: left;
+			width: 25%;
+
+			&:before {
+				content: url('../images/i-checkmark-grey.svg');
+				margin-right: 4px;
+				width: 11px;
+				height: 10px;
+				display: inline-block;
+			}
+
+			&.no-svg:before {
+				content: url('../images/i-checkmark-grey.png');
+			}
+
+			&.no-bullet:before {
+				content: "";
+				width: 0;
+				height: 0;
+				padding-left: 0;
+				background-image: none;
+			}
+		}
+	}
+
+	.features-extra {
+		background-color: $c-olive-light;
+		border: 1px solid $c-olive;
+		padding: $s-pricing-default;
+		@include border-radius(10px);
 	}
 
 }
