--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -763,19 +763,21 @@ footer #help small,
       top: 0;
       left: 50%;
       margin-left: 340px; }
-  #pricing-new .plans-lineup:after {
-    content: ".";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden; }
+  #pricing-new .plans-lineup {
+    text-align: center; }
+    #pricing-new .plans-lineup:after {
+      content: ".";
+      display: block;
+      height: 0;
+      clear: both;
+      visibility: hidden; }
   #pricing-new .plans {
     position: relative;
     float: left;
     display: inline-block;
     margin: 0 0 20px;
     padding: 0;
-    text-align: center; }
+    text-align: left; }
     #pricing-new .plans:after {
       content: ".";
       display: block;
@@ -819,8 +821,7 @@ footer #help small,
     border: 1px solid #cccccc;
     margin: 20px -1px 0 0;
     color: #3f493c;
-    padding: 0 10px 10px;
-    text-align: left; }
+    padding: 0 10px 10px; }
     #pricing-new .plan .plan-name {
       margin-top: -10px; }
     #pricing-new .plan .plan-price {
@@ -851,10 +852,16 @@ footer #help small,
       #pricing-new .plan.prioritize ul {
         margin-bottom: 40px; }
   #pricing-new .plans-other {
-    padding: 20px 0 40px;
-    display: block;
-    text-align: center;
-    clear: both; }
+    margin: 10px 0 20px;
+    padding: 20px;
+    display: inline-block;
+    clear: both;
+    border: 1px dashed #899a84;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px; }
+    #pricing-new .plans-other p {
+      margin: 5px 0; }
   #pricing-new .link-custom-plans {
     display: block;
     clear: both;
