--- a/stylesheets/scss/_variables.scss
+++ b/stylesheets/scss/_variables.scss
@@ -54,3 +54,7 @@ $c-spring-bg:           #CEE7CA;
 $c-spring-green:        #83A990;
 
 $central-field:         60%;
+
+// Spacing
+
+$s-default:             10px; // default spacing unit
