--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -733,6 +733,7 @@ footer #help small,
   /* Referral notice */
   /* Features List */ }
   #pricing-new h1 {
+    font-family: "ff-cocon-web-pro", "Helvetica Neue", Arial, Helvetica, sans-serif;
     font-size: 1.8rem;
     font-weight: normal;
     -webkit-font-smoothing: antialiased; }
@@ -748,6 +749,7 @@ footer #help small,
       color: #064;
       text-shadow: 0 1px 1px #FFF; }
     #pricing-new .plans-head h2 {
+      font-family: "ff-cocon-web-pro", "Helvetica Neue", Arial, Helvetica, sans-serif;
       margin: 0;
       padding: 0;
       color: #6A8066;
